# nokap

./: .gitignore  CITATION.cff  Makefile  great-docs.yml  index.qmd  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
gun/: __init__.py  _browser.py  _cdp.py  _errors.py  _pdf.py  _screenshot.py  _session.py  _types.py  _utils.py
nokap/: __init__.py  _api.py  _cli.py  _pdf.py  _screenshot.py  mcp.py
scripts/: site_capture.py  visual_check.py
skills/nokap/: SKILL.md
skills/nokap-html-capture/: SKILL.md
skills/nokap-pdf/: SKILL.md
skills/nokap-web-capture/: SKILL.md
tests/: test_cli.py  test_integration.py  test_types.py
user_guide/: 00-get-started.qmd  01-installation.qmd  02-quick-start.qmd  10-screenshots.qmd  11-selectors-and-clipping.qmd  12-pdf-generation.qmd  13-cli.qmd  21-error-handling.qmd  22-performance-tips.qmd
